# data_pipeline_api

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  LICENSE  README.md  access-701f367bdde144dca30a3a4aa996d5cc.yaml  access-77fa637e8c644e79be1542fce6cfc97e.yaml  access-84ed8d1264374e2697fb7d52b2a67d85.yaml  access-c1876429bfea4ac4a6286c8ed7ce026e.yaml  conda_upload.sh  contributing.md  environment.yml  setup.py  test.txt
.github/workflows/: ci-cppbindings-cmake.yml  ci-cppbindings.yml  data_pipeline_api.yml
.github/workflows/ci-cppbindings.yml/: ci-cppbindings.yml
bindings/cpp/: .gitignore  CMakeLists.txt  Makefile  ParameterTypes.h  README.md  array.cc  array.h  array.hh  catch.cc  cppbindings.cc  data_pipeline_api  data_pipeline_cppConfig.cmake.in  datapipeline.cc  datapipeline.hh  distributions.cc  distributions.hh  gitversion.sh  install-python  install-python-stack  requirements.txt  table.cc  table.hh  test_array.cpp  test_catch.cc  test_cpp_datapipeline.cc  test_datapipeline.cc  test_local.cc  tests.cc
bindings/cpp/tests/: CMakeLists.txt  metadata.yaml  setup.hh  test_array.cc  test_distribution.cc  test_distribution_class.cc  test_distribution_pipeline.cc  test_estimate.cc  test_pipeline_table.cc  test_sample.cc  test_table_class.cc
conda/: meta.yaml
data_pipeline_api/: api.py  data_processing_api.py  database_file_api.py  file_api.py  git_info.py  metadata.py  metadata_store.py  overrides.py  simple_network_sim_api.py  standard_api.py  test_api.py
data_pipeline_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data_pipeline_api/file_formats/: object_file.py  parameter_file.py
data_pipeline_api/registry/: README.md  __init__.py  access_upload.py  common.py  create_model.py  download.py  downloader.py  upload.py  upload_data_product.py  upload_input.py  utils.py
data_pipeline_api/registry/example_configs/: example_upload_config.yaml  simple_network_sim_config.yaml  simple_network_sim_upload.yaml
data_pipeline_api/registry/templates/: data_product.yaml
example_data/: .known_hashes.toml
example_data/human/demographics/scotland/1/: data.h5
example_data/human/demographics/simulated/households/1/: data.toml
example_data/human/demographics/simulated/population/1/: data.toml
example_data/human/demographics/simulated/workplace/1/: data.toml
example_data/human/infection/SARS-CoV-2/latent-period/2/: data.toml
example_data/pathogen/SARS-CoV-2/surface-survival/1/: data.toml
examples/: data_access.py  data_processing_api_usage.py  data_processing_config.yaml  metadata.yaml  standard_api_usage.py
examples/example_configs/: simple_network_sim_config.yaml  simple_network_sim_test_upload.yaml  simple_network_sim_upload.yaml
examples/human/: external_object.csv
examples/test_data_2/: .metadata  access.yaml  config.toml  config.yaml  file2.txt  metadata.yaml
examples/test_data_2/human/estimate/: 1.csv
examples/test_data_2/human/estimateb/: 1.toml
examples/test_data_2/human/mixing-matrix/: mymixingmatrix.csv
java_api/: settings.gradle
java_api/file_api/: build.gradle
java_api/file_api/src/main/java/uk/ramp/access/: AccessEntry.java  AccessLog.java  AccessLogWriter.java  AccessLogger.java  AccessLoggerFactory.java  AccessLoggerImpl.java  NoImplAccessLogger.java
java_api/file_api/src/main/java/uk/ramp/api/: FileApi.java
java_api/file_api/src/main/java/uk/ramp/config/: Config.java  ConfigFactory.java
java_api/file_api/src/main/java/uk/ramp/file/: CleanableFileChannel.java  FileDirectoryNormaliser.java  FileReader.java
java_api/file_api/src/main/java/uk/ramp/hash/: HashMetadataAppender.java  Hasher.java  Sha1Hasher.java
java_api/file_api/src/main/java/uk/ramp/metadata/: IssueItem.java  MetaDataReader.java  MetadataFactory.java  MetadataItem.java  MetadataSelector.java  ReadOnlyRunMetadata.java  RunMetadata.java  WriteOnlyRunMetadata.java
java_api/file_api/src/main/java/uk/ramp/overrides/: OverridesApplier.java
java_api/file_api/src/test/resources/: config.yaml
java_api/gradle/wrapper/: gradle-wrapper.properties
java_api/src/main/java/uk/ramp/access/: AccessLoggerFactory.java  AccessLoggerImpl.java
java_api/src/main/java/uk/ramp/config/: ConfigReader.java
java_api/src/main/java/uk/ramp/metadata/: MatchingMetadataSelector.java  MetadataItem.java  MetadataSelectorFactory.java
java_api/src/main/java/uk/ramp/yaml/: BaseYamlWriter.java  YamlReader.java
java_api/src/test/java/uk/ramp/access/: AccessLoggerTest.java
java_api/src/test/java/uk/ramp/api/: FileApiIntegrationTest.java
java_api/src/test/java/uk/ramp/file/: CleanableFileChannelIntegrationTest.java  FileDirectoryNormaliserTest.java
java_api/src/test/java/uk/ramp/metadata/: MetadataItemTest.java
java_api/src/test/resources/folder/data/: metadata.yaml
java_api/standard_api/: build.gradle
java_api/standard_api/src/test/resources/: config.yaml  location.txt  table.csv  table.h5
java_api/standard_api/src/test/resources/folder/data/: expectedDistribution.toml  expectedDistributionCategorical.toml  expectedEstimate.toml  expectedSamples.toml  expectedSamplesMultiple.toml  metadata.yaml
r_api/: README.md
scripts/: convert_access_to_config.py  release.sh  upload_conda.sh
src/data_pipeline_api/: api.py  csv_api.py  file_api.py  file_system_data_access.py  filename_api.py  metadata.py  metadata_store.py  overrides.py  parameter_file.py  read_write_api.py  scrc_scheme.py  simple_network_sim_api.py  standard_api.py
tests/: test_api.py  test_data_processing_api.py  test_file_api.py  test_file_system_data_access.py  test_git_info.py  test_metadata_store.py  test_overrides.py  test_parameter_file.py  test_standard_api.py
tests/data/: config.yaml  demographics.h5  metadata.yaml
tests/data/object/: example.h5
tests/data/parameter/: example.toml
tests/file_formats/: test_object_file.py  test_parameter_file.py
tests/registry/: access_upload.py  common.py  download.py  test_access_upload.py  test_common.py  test_download.py  test_downloader.py  test_upload.py  test_utils.py  upload.py
(+57 files in other folders)
